kubernetes/apps/observability/uptime-kuma/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
spec:
  hostnames:
    - kuma.ringbell.cc
  parentRefs:
    - name: internal
      namespace: networking
  rules:
    - backendRefs:
        - name: uptime-kuma
          port: 3001
